media/bazarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-svc
spec:
  ports:
    - name: bazarr-port
      port: 80
      targetPort: 6767
  selector:
    app: bazarr
